syntax = "proto3";

package admin;

option go_package = "./pkg/pb/authh";

service AuthService {
  rpc DoesUserExist(DoesUserExistRequest) returns(DoesUserExistResponse){};
  rpc FindUserName(FindUserNameRequest) returns(FindUserNameResponse){}
  rpc UserData(UserDataRequest) returns(UserDataResponse){}
  rpc GetFollowingUsers (GetFollowingUsersRequest) returns (GetFollowingUsersResponse){}
}

message DoesUserExistRequest{
    int64 id=1;
}

message DoesUserExistResponse{
    bool data=1;
}

message FindUserNameRequest{
    int64 id =1;
}
message FindUserNameResponse{
    string name=1;
}
message UserDataRequest{
    int64 userid=1;
}
message UserDataResponse{
    int64 userid =1;
    string username=2;
    string profile=3;
}

message GetFollowingUsersRequest{
    int64 userID = 1;
}

message Followuser{
    int64 followinguser = 1;
}

message GetFollowingUsersResponse{
    repeated Followuser user = 1;
}